# swtextcrawl

./: .gitignore  LICENSE  README.md  app.py  audio.py  pyproject.toml  renderer.py
assets/font/News Gothic Extra Condensed Regular/: readme.html
assets/font/Trade Gothic LT Std Bold No. 2/: readme.html
static/: index.html
