[project]
name = "swtextcrawl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
    "pillow>=11.0",
    "numpy>=2.0",
    "opencv-python>=4.10",
    "imageio>=2.36",
    "imageio-ffmpeg>=0.5",
    "mutagen>=1.47",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
